--- a/demo.ipynb
+++ b/demo.ipynb
@@ -55,10 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from config import transfer_utf8\n",
+    "transfer_utf8(\"sanguo.txt\", \"sanguo-utf8.txt\", input_encoding='gb18030')"
+   ]
   }
  ],
  "metadata": {
@@ -77,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
